code review
git-svn-id: http://192.168.1.227/svn/CMS4j/trunk@450 d1d3f527-36cb-4749-94ba-585de1865e2b